assets/styles/style.css
/* ... */
@media ( max-width: 721px ){
	/* tab layout */

	/*to allow clicks / taps through to the second tab*/
	.theme,
	.theme-scroller-wrapper,
	.theme--content{
		pointer-events: none;
	}
		.theme--leader,
		.theme--follower{
			pointer-events: all;
		}

	.theme{
		position: fixed;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		z-index: 3;
		-webkit-box-shadow: none;
		-moz-box-shadow: none;
		box-shadow: none;
	}
		.theme .theme--content,
		.theme.theme__networks .theme--content{
			-webkit-box-shadow: none;
			-moz-box-shadow: none;
			box-shadow: none;
		}
		.theme-scroller-wrapper,
		.theme--content,
		.theme--follower{
			height: 100%;
		}
		.theme:nth-child(2){
			z-index: 2;
		}

		.theme,
		.theme .theme--content,
		.theme.theme__networks,
		.theme.theme__networks .theme--content{
			background: transparent
		}
		.theme--leader{
			width: 40%;
			box-sizing: border-box;
			background: #FFFFFF;
			position: fixed;
			z-index: 10;
			margin-left: 20%;
		}
			.theme.theme__networks .theme--leader{
				z-index: 11;
			}
			.theme.theme__networks .theme--content .theme--leader,
			.theme .theme--content .theme--leader{
				border-bottom: none;
			}
			.theme--leader h1{
				text-align: center;
			}
			/* .theme--leader h1 span:last-child{
				display: none;
			} */
		.theme .theme--follower{
			box-sizing: border-box;
			padding: 1rem;
			height: 100%;
			overflow-x: hidden;
			background: #FFFFFF;
			top: 2.4em;
			position: fixed;
			z-index: 9;
		}
		.theme .theme--section{
			padding-right: 0;
		}

		.theme.theme__networks .theme--leader,
		.theme.theme__networks .theme--follower{
			background: #000000;
		}
			.theme.theme__networks .theme--leader{
				margin-left: 60%;
			}

		.theme .theme--follower{
			/* -webkit-box-shadow: 0px 0px 0.5px 0.25px rgba( 255, 255, 255, 0.9 ),
													0px 0px 18px 3px rgba(100,100,100,0.85);
				 -moz-box-shadow: 0px 0px 0.5px 0.25px rgba( 255, 255, 255, 0.9 ),
													0px 0px 18px 3px rgba(100,100,100,0.85);
							box-shadow: 0px 0px 0.5px 0.25px rgba( 255, 255, 255, 0.9 ),
													0px 0px 18px 3px rgba(100,100,100,0.85); */
		}
		.theme.theme__networks .theme--follower{
			/* -webkit-box-shadow: 0px 0px 0.5px 0.25px rgba( 0, 0, 0, 0.9 ),
													0px 0px 15px 3px rgba(180,180,180,0.85);
				 -moz-box-shadow: 0px 0px 0.5px 0.25px rgba( 0, 0, 0, 0.9 ),
													0px 0px 15px 3px rgba(180,180,180,0.85);
							box-shadow: 0px 0px 0.5px 0.25px rgba( 0, 0, 0, 0.9 ),
													0px 0px 15px 3px rgba(180,180,180,0.85); */
		}


		.committee-header{
			width: 20%;
			left: 0;
			right: auto;
			top: 0;
			height: 2.4rem;
			background: #FF0000;
		}
			.committee-header h1{
				width: 1.4rem;
				height: 0.9rem;
				margin: 0.85rem auto;
				background-position: -1.6rem top;
			}

}

	.theme .theme--section{
		margin-bottom: 3em;
	}
		.theme .theme--section__description{
			margin-bottom: 1.4rem;
			position: relative;
    	z-index: 1;
			padding-bottom: 1rem;
		}
			.theme .theme--section__description p:last-child{
				margin-bottom: 0;
			}
		@media (min-width: 721px){
			.theme--section__description{
				margin-bottom: 2.4rem;
			}
		}

		.theme .theme--section > h2{
			padding-bottom: .3em;
			margin-bottom: .4em;
			position: relative;
		}
			.theme .theme--section__work > h2{
				display: none;
			}
			.theme .theme--section > h2:after,
			.theme .theme--section__description:after{
				content: '';
				display: block;
				height: 1px;
				width: 140%;
				width: calc(100% + 2.4rem);
				position: absolute;
				bottom: 0;
				background: #000000;
				left: -1rem;
			}

			.theme .theme--section__notes > h2,
			.theme .theme--section__research > h2 {
				text-indent: 1.7em;
			}
				.theme[data-proportion="tiny"] .theme--section__research > h2,
				.theme[data-proportion="tiny"] .theme--section__notes > h2 {
					text-indent: 0;
				}

				.theme[data-proportion="large"] .theme--section__description:after{
					display: none;
				}
					.theme[data-proportion="large"] .theme--section__description{
						padding-bottom: 0;
					}
					.theme[data-proportion="small"] .theme--section__description{
						padding-bottom: 0.7rem;
					}
		.theme__networks .theme--section > h2:after,
		.theme__networks .theme--section__description:after{
			background: #ffffff;
		}

		.theme .theme--section ul{
			padding: 0;
			list-style-type: none;
		}

		.theme--section__notes .theme-item__post h3{
			max-width: 100%;
		}

	.theme-item__hasimg{
		position: relative;
		z-index: 0;
		transition: z-index .01s .2s linear;
	}
		.theme-item__hasimg h3{
			position: relative;
			z-index: 2;
		}
		.theme-item__hasimg .theme-item--hoverimg{
			opacity: 0;
			position: absolute;
			width: 100%;
			max-width: 24em;
			padding: 1.2em;
			box-sizing: border-box;
			transform: translate( -50%, -50% );
			top: 50%;
			left: 50%;
			z-index: 10;
			pointer-events: none;
		}

		.theme-item__hasimg.hoverimg-active,
		.theme-item__hasimg:hover{
			z-index: 2;
		}
		.theme-item--hoverimg.active{
			opacity: 1;
			filter: blur( 0px );
			transition: filter .2s .15s ease-in, opacity .2s ease-in;
		}
			.theme-item__hasimg.hoverimg-active h3{
				overflow: visible;
			}
			.theme-item__hasimg h3 .text{
				transition: filter .3s ease-in;
			}

			@media (min-width: 721px){
				.theme-item__hasimg .theme-item--hoverimg{
					filter: blur( 3px );
					transition: filter .2s 0s ease-in, opacity .2s .2s ease-in;
				}
				.theme-item--hoverimg.active{
					opacity: 1;
					filter: blur( 0px );
					transition: filter .2s .15s ease-in, opacity .2s ease-in;
				}
				.theme-item__hasimg.hoverimg-active h3 .text{
					filter: blur( 3px );
					overflow: visible;
				}
			}

		.dc-hoverimg-trigger{
			display: inline-block;
			vertical-align: top;
			margin-right: .2em;
			border: 1px solid #000000;
			width: 1em;
	    height: 0.57em;
	    top: 0.27em;
	    position: absolute;
	    right: 100%;
	    margin-right: 0.65rem;
			cursor: crosshair;
		}
/* ... */

